--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -445,7 +445,7 @@
 
         <!-- MENU -->
         <menuitem id="nursery_seed_selection"
-                  name="Selection"
+                  name="Selection Seed"
                   parent="nursery_seed_batch"
                   action="action_list_selection" sequence="15"
                   groups="estate.group_manager"/>
