--- a/estate_nursery/views/estate_nursery_cleaving_seed_view.xml
+++ b/estate_nursery/views/estate_nursery_cleaving_seed_view.xml
@@ -180,7 +180,7 @@
         <!-- MENU -->
         <menuitem id="nursery_seed_cleaving"
                   name="Cleaving Seed"
-                  parent="nursery_seed_batch"
+                  parent="detail_batch"
                   action="action_list_cleaving" sequence="16"
                   groups="estate.group_manager"/>
     </data>
