--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -369,16 +369,17 @@
 
         
         <!--Menu View-->
-        <menuitem id="estate_nursery_planting" name="Transplanting" parent="estate_nursery_menu" sequence="80"/>
+        <menuitem id="estate_nursery_planting" name="Transplanting" parent="estate_nursery_menu" sequence="80"
+                  groups="estate.group_user"/>
          <!-- MENU -->
         <menuitem id="nursery_transfer_mn"
                   name="Request Transfer Pn to Mn"
                   parent="estate_nursery_planting"
                   action="action_list_transfermn" sequence="18"
-                  groups="estate.group_manager"/>
+                  groups="estate.group_user"/>
         <menuitem id="request_seed_planting" name="Request Seed Planting" parent="estate_nursery_planting"
-                  action="action_list_requestplanting" sequence="19"/>
+                  action="action_list_requestplanting" sequence="19" groups="estate.group_user"/>
         <menuitem id="planting_seed" name="Seed Delivery Order" parent="estate_nursery_planting"
-                  action="action_list_seeddo" sequence="20"/>
+                  action="action_list_seeddo" sequence="20" groups="estate.group_user"/>
     </data>
 </openerp>
